--- a/.gitlab-ci.new.yml
+++ b/.gitlab-ci.new.yml
@@ -106,6 +106,23 @@ after_script:
 #  script:
 #    - curl --connect-timeout 10 https://repository.foreach.be/nexus/repository/public/archetype-catalog.xml
 #    - echo "Success Nexus Foreach"
+include:
+  - project: 'antwerpen/across/across-development'
+    file:
+      - '/gitlab-ci/common.gitlab-ci.yml'
+      - '/gitlab-ci/unit-tests.gitlab-ci.yml'
+      - '/gitlab-ci/integration-tests.gitlab-ci.yml'
+      - '/gitlab-ci/deploy.gitlab-ci.yml'
+
+variables:
+  # Maven needs more memory in this repository, because the
+  # maven-war-plugin:war goal runs out-of-memory with 256m:
+  MAVEN_OPTS: >-
+    -Xmx384m
+    -Dhttps.protocols=TLSv1.2
+    -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
+    -Dorg.slf4j.simpleLogger.showDateTime=true
+    -Djava.awt.headless=true
 # .gitlab-ci.yml extension enables completion support in IntelliJ
 
 # TODO: For merge requests do not `deploy` but only run `verify`.
